--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -1,22 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Yi\n",
     "\n",
-    "[01.AI](https://platform.01.ai/), founded by Dr. Kai-Fu Lee, is a global company dedicated to building cutting-edge technology and software applications for large-scale models in the AI 2.0 era, with Yi-Large models with hundreds of billions of parameters, multimodal models, an open API platform, and open-source models such as Yi-34B/9B/6B and Yi-VL for the world.",
-    "This example demonstrates using Langchain to interact with Yi."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Install Required Libraries\n",
+    "[01.AI](https://platform.01.ai/), founded by Dr. Kai-Fu Lee, is a global company dedicated to building cutting-edge technology and software applications for large-scale models in the AI 2.0 era, with Yi-Large models with hundreds of billions of parameters, multimodal models, an open API platform, and open-source models such as Yi-34B/9B/6B and Yi-VL for the world.\n",
     "\n",
-    "First, ensure you have the necessary libraries installed:"
+    "This example demonstrates how to use LangChain to interact with Yi."
    ]
   },
   {
@@ -25,33 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install langchain openai requests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Obtain Yi API Key\n",
-    "\n",
-    "To use the Yi model, you need an API key. Follow these steps to obtain one:\n",
-    "\n",
-    "1. Visit Yi's official website: https://platform.01.ai/\n",
-    "2. Register for an account or log in to your existing account.\n",
-    "3. Navigate to the API key settings page.\n",
-    "4. Create a new API key.\n",
-    "5. Copy the generated API key; we'll use it later.\n",
-    "\n",
-    "Remember to keep your API key secure and do not share it publicly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Set Environment Variable\n",
-    "\n",
-    "Set your API key as an environment variable:"
+    "from langchain_community.llms.yi import Yi"
    ]
   },
   {
@@ -62,14 +29,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"YI_API_KEY\"] = \"your-api-key-here\"  # Replace with your actual API key"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Import and Initialize Yi LLM"
+    "# Generate your API key from: https://platform.01.ai/\n",
+    "os.environ[\"YI_API_KEY\"] = \"YOUR_YI_API_KEY\""
    ]
   },
   {
@@ -78,20 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms.yi import Yi\n",
-    "\n",
-    "# Initialize Yi LLM\n",
-    "yi = Yi(\n",
-    "    model=\"yi-large\",  # Or another model of your choice\n",
-    "    base_url=\"https://api.lingyiwanwu.com/v1\"  # Use domestic API, or \"https://api.01.ai/v1\" for international regions\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Use Yi LLM"
+    "llm = Yi()\n",
+    "# or use a specific model\n",
+    "# Available models: Check https://platform.01.ai/ for the latest models\n",
+    "# llm = Yi(model=\"yi-large\")"
    ]
   },
   {
@@ -100,43 +51,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate text using Yi LLM\n",
-    "response = yi.invoke(\"Tell me a short story about artificial intelligence.\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Use Yi LLM in a LangChain Chain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain\n",
-    "\n",
-    "# Create a prompt template\n",
-    "template = \"Write a short advertising slogan for a {product_type} called '{product_name}'.\"\n",
-    "prompt = PromptTemplate(template=template, input_variables=[\"product_name\", \"product_type\"])\n",
-    "\n",
-    "# Create an LLMChain\n",
-    "chain = LLMChain(llm=yi, prompt=prompt)\n",
-    "\n",
-    "# Use the chain to generate a slogan\n",
-    "result = chain.run({\"product_name\": \"SmartAssist\", \"product_type\": \"AI assistant\"})\n",
-    "print(result)"
+    "# Prompt the model\n",
+    "llm.invoke(\"What are the main differences between machine learning and deep learning?\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
