--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -52,7 +52,7 @@
     "chat = YiChat()\n",
     "\n",
     "# For a specific model, you can use:\n",
-    "# chat = YiChat(model=\"yi-34b-chat\")\n",
+    "# chat = YiChat(model=\"yi-larget\")\n",
     "# Check https://platform.01.ai/ for the latest available models"
    ]
   },
@@ -83,52 +83,6 @@
    "metadata": {},
    "source": [
     "## Multi-turn Conversation Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conversation = [\n",
-    "    SystemMessage(content=\"You are a helpful AI assistant.\"),\n",
-    "    HumanMessage(content=\"Can you explain the concept of transfer learning in AI?\"),\n",
-    "    AIMessage(content=\"Certainly! Transfer learning is a machine learning technique...\"),\n",
-    "    HumanMessage(content=\"How does this relate to the Yi models developed by 01.AI?\")\n",
-    "]\n",
-    "\n",
-    "response = chat.invoke(conversation)\n",
-    "print(response.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Advanced Features\n",
-    "\n",
-    "Yi models offer various advanced capabilities. Here's an example of using the model for a more complex task:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complex_prompt = [\n",
-    "    SystemMessage(content=\"You are an AI expert. Analyze the given text and provide insights.\"),\n",
-    "    HumanMessage(content=\"\"\"Analyze the following text from 01.AI's website:\n",
-    "    '01.AI is dedicated to building cutting-edge technology and software applications \n",
-    "    for large-scale models in the AI 2.0 era, with Yi-Large models with hundreds of \n",
-    "    billions of parameters, multimodal models, an open API platform, and open-source \n",
-    "    models such as Yi-34B/9B/6B and Yi-VL for the world.'\n",
-    "    What does this tell us about their approach to AI development?\"\"\")\n",
-    "]\n",
-    "\n",
-    "response = chat.invoke(complex_prompt)\n",
-    "print(response.content)"
    ]
   }
  ],
