--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "[01.AI](https://platform.01.ai/), founded by Dr. Kai-Fu Lee, is a global company at the forefront of AI 2.0. They offer cutting-edge large language models, including the Yi series, which range from 6B to hundreds of billions of parameters. 01.AI also provides multimodal models, an open API platform, and open-source options like Yi-34B/9B/6B and Yi-VL.\n",
     "\n",
-    "This notebook demonstrates how to leverage LangChain for interacting with Yi's Chat model API."
+    "This notebook demonstrates how to leverage LangChain for interacting with Yi Inference for Chat."
    ]
   },
   {
