--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -52,7 +52,7 @@
     "chat = YiChat()\n",
     "\n",
     "# For a specific model, you can use:\n",
-    "# chat = YiChat(model=\"yi-larget\")\n",
+    "# chat = YiChat(model=\"yi-large\")\n",
     "# Check https://platform.01.ai/ for the latest available models"
    ]
   },
