--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import os\n",
     "\n",
-    "# Generate your API key from: https://platform.01.ai/\n",
+    "# Generate your API key from: https://platform.01.ai (https://platform.lingyiwanwu.com)/\n",
     "os.environ[\"YI_API_KEY\"] = \"YOUR_YI_API_KEY\""
    ]
   },
@@ -41,7 +41,7 @@
    "source": [
     "llm = Yi()\n",
     "# or use a specific model\n",
-    "# Available models: Check https://platform.01.ai/ for the latest models\nor you can click here https://platform.lingyiwanwu.com/",
+    "# Available models: Check https://platform.01.ai/ for the latest models\n # or you can click here https://platform.lingyiwanwu.com/",
     "# llm = Yi(model=\"yi-large\")"
    ]
   },
