--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import os\n",
     "\n",
-    "# Set your API key. Obtain it from: https://platform.01.ai/\n",
+    "# Set your API key. Obtain it from: https://platform.01.ai/ or https://platform.lingyiwanwu.com\n",
     "os.environ[\"YI_API_KEY\"] = \"YOUR_YI_API_KEY_HERE\""
    ]
   },
@@ -53,7 +53,7 @@
     "\n",
     "# For a specific model, you can use:\n",
     "# chat = YiChat(model=\"yi-large\")\n",
-    "# Check https://platform.01.ai/ for the latest available models"
+    "# Check https://platform.01.ai/ or https://platform.lingyiwanwu.comfor the latest available models"
    ]
   },
   {
