Added author name

--- a/cookbook/rag-locally-on-intel-cpu.ipynb
+++ b/cookbook/rag-locally-on-intel-cpu.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48113be6-44bb-4aac-aed3-76a1365b9561",
+   "metadata": {},
+   "source": [
+    "Author - Pratool Bharti (pratool.bharti@intel.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b10b54b-1572-4ea1-9c1e-1d29fcc3dcd9",
    "metadata": {},
    "source": [
