--- a/docs/docs/integrations/tools/riza.ipynb
+++ b/docs/docs/integrations/tools/riza.ipynb
@@ -70,9 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.agents import AgentExecutor, create_tool_calling_agent\n",
     "from langchain_anthropic import ChatAnthropic\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain.agents import AgentExecutor, create_tool_calling_agent"
+    "from langchain_core.prompts import ChatPromptTemplate"
    ]
   },
   {
@@ -110,11 +110,16 @@
    "source": [
     "llm = ChatAnthropic(model=\"claude-3-haiku-20240307\", temperature=0)\n",
     "\n",
-    "prompt_template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a helpful assistant. Make sure to use a tool if you need to solve a problem.\"),\n",
-    "    (\"human\", \"{input}\"),\n",
-    "    (\"placeholder\", \"{agent_scratchpad}\")\n",
-    "])\n",
+    "prompt_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant. Make sure to use a tool if you need to solve a problem.\",\n",
+    "        ),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "        (\"placeholder\", \"{agent_scratchpad}\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "agent = create_tool_calling_agent(llm, tools, prompt_template)\n",
     "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)"
