improvement on notebook example, added sample return

--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,6 @@
     "chat = ChatOCIModelDeploymentEndpoint(\n",
     "    model=\"odsc-llm\",\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
-    "    auth=ads.common.auth.default_signer(),\n",
     "    streaming=False,\n",
     "    max_retries=3,\n",
     "    stop=None,\n",
@@ -107,9 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"J'adore programmer.\", response_metadata={'token_usage': {'prompt_tokens': 44, 'total_tokens': 52, 'completion_tokens': 8}, 'model_name': 'odsc-llm', 'system_fingerprint': '', 'finish_reason': 'stop'}, id='run-ca145168-efa9-414c-9dd1-21d10766fdd3-0')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "messages = [\n",
     "    (\n",
@@ -125,9 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "J'adore programmer.\n"
+     ]
+    }
+   ],
    "source": [
     "print(ai_msg.content)"
    ]
@@ -143,9 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Ich liebe Programmierung.', response_metadata={'token_usage': {'prompt_tokens': 38, 'total_tokens': 48, 'completion_tokens': 10}, 'model_name': 'odsc-llm', 'system_fingerprint': '', 'finish_reason': 'stop'}, id='run-5dd936b0-b97e-490e-9869-2ad3dd524234-0')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -180,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='我喜欢编程', response_metadata={'token_usage': {'prompt_tokens': 37, 'total_tokens': 50, 'completion_tokens': 13}, 'model_name': 'odsc-llm', 'system_fingerprint': '', 'finish_reason': 'stop'}, id='run-a2dc9393-f269-41a4-b908-b1d8a92cf827-0')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "system = (\n",
     "    \"You are a helpful assistant that translates {input_language} to {output_language}.\"\n",
@@ -232,22 +273,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "1. California\n",
+      "2. Texas\n",
+      "3. Florida\n",
+      "4. New York\n",
+      "5. Illinois"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import ads\n",
     "\n",
     "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "ads.set_auth(\"security_token\", profile=\"custboat\")\n",
+    "ads.set_auth(\"resource_principal\")\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
-    "    [(\"human\", \"List out the 5 most populous countries in the world\")]\n",
+    "    [(\"human\", \"List out the 5 states in the United State.\")]\n",
     ")\n",
     "\n",
     "chat = ChatOCIModelDeploymentEndpoint(\n",
-    "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\"\n",
+    "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
     ")\n",
     "\n",
     "chain = prompt | chat\n",
