improvement on notebook example, added structured output

--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -316,7 +316,58 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Structured output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'setup': 'Why did the cat get stuck in the tree?',\n",
+       " 'punchline': 'Because it was chasing its tail!'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.pydantic_v1 import BaseModel\n",
+    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "\n",
+    "\n",
+    "class Joke(BaseModel):\n",
+    "    \"\"\"A setup to a joke and the punchline.\"\"\"\n",
+    "\n",
+    "    setup: str\n",
+    "    punchline: str\n",
+    "\n",
+    "\n",
+    "chat = ChatOCIModelDeploymentEndpoint(\n",
+    "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
+    ")\n",
+    "structured_llm = chat.with_structured_output(Joke, method=\"json_mode\")\n",
+    "output = structured_llm.invoke(\n",
+    "    \"Tell me a joke about cats, respond in JSON with `setup` and `punchline` keys\"\n",
+    ")\n",
+    "\n",
+    "output.dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For detailed documentation of all ChatOCIModelDeploymentEndpoint features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html)."
+   ]
   }
  ],
  "metadata": {
