improvement on notebook example, added structured output

--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -62,9 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
-    "\n",
-    "Now we can instantiate our model object and generate chat completions:"
+    "## Instantiation"
    ]
   },
   {
@@ -155,9 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chaining\n",
-    "\n",
-    "We can chain our model with a prompt template like so:"
+    "## Chaining"
    ]
   },
   {
@@ -203,9 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Asynchronous calls\n",
-    "\n",
-    "We can make asynchronous calls via the Runnables [Async Interface](/docs/concepts#interface)."
+    "## Asynchronous calls"
    ]
   },
   {
@@ -266,9 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming calls\n",
-    "\n",
-    "We can also stream outputs via the `stream` method:"
+    "## Streaming calls"
    ]
   },
   {
