--- a/docs/docs/how_to/callbacks_custom_events.ipynb
+++ b/docs/docs/how_to/callbacks_custom_events.ipynb
@@ -18,6 +18,9 @@
     "In some situations, you may want to dipsatch a custom callback event from within a [Runnable](/docs/concepts/#runnable-interface) so it can be surfaced\n",
     "in a custom callback handler or via the [Astream Events API](/docs/concepts/#astream_events).\n",
     "\n",
+    "For example, if you have a long running tool with multiple steps, you can dispatch custom events between the steps and use these custom events to monitor progress.\n",
+    "You could also surface these custom events to an end user of your application to show them how the current task is progressing.\n",
+    "\n",
     "To dispatch a custom event you need to decide on two attributes for the event: the `name` and the `data`.\n",
     "\n",
     "| Attribute | Type | Description                                                                                              |\n",
@@ -31,6 +34,7 @@
     "* Custom callback events can only be dispatched from within an existing `Runnable`.\n",
     "* If using `astream_events`, you must use `version='v2'` to see custom events.\n",
     "* Sending or rendering custom callbacks events in LangSmith is not yet supported.\n",
+    "* If using python<=3.10 and async, you must propagate the `RunnableConfig` object manually (see example below).\n",
     ":::"
    ]
   },
@@ -61,24 +65,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sync\n",
+    "## Atream Events API\n",
     "\n",
-    "Let's see how to emit custom events in a sync environment use `dispatch_custom_event`.\n",
+    "The most useful way to consume custom events is via the [Astream Events API](/docs/concepts/#astream_events).\n",
     "\n",
-    "You **must** call `dispatch_custom_event` from within an existing `Runnable`."
+    "We can use the `async` `adispatch_custom_event` API to emit custom events in an async setting. \n",
+    "\n",
+    ":::caution COMPATIBILITY\n",
+    "LangChain cannot automatically propagate configuration, including callbacks necessary for astream_events(), to child runnables if you are running async code in python<=3.10. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
+    "\n",
+    "If you are running python<=3.10, you will need to manually propagate the `RunnableConfig` object to the child runnable in async environments. For an example of how to manually propagate the config, see the implementation of the `bar` RunnableLambda below.\n",
+    "\n",
+    "If you are running python>=3.11, the `RunnableConfig` will automatically propagate to child runnables in async environment. However, it is still a good idea to propagate the `RunnableConfig` manually if your code may run in other Python versions.\n",
+    ":::\n",
+    "\n",
+    ":::{.callout-important}\n",
+    "\n",
+    "* To see custom events via the astream events API, you need to use the newer `v2` API of `astream_events`.\n",
+    ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: 323b3520-efb3-411f-8466-dc80d1950292\n",
-      "Received event event2 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: 323b3520-efb3-411f-8466-dc80d1950292\n"
+      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'foo', 'tags': [], 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'metadata': {}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
+      "{'event': 'on_chain_stream', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'foo', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'foo', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eugene/.pyenv/versions/3.11.4/envs/core/lib/python3.11/site-packages/langchain_core/_api/beta_decorator.py:87: LangChainBetaWarning: This API is in beta and may change in the future.\n",
+      "  warn_beta(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.callbacks.manager import (\n",
+    "    adispatch_custom_event,\n",
+    ")\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "from langchain_core.runnables.config import RunnableConfig\n",
+    "\n",
+    "\n",
+    "@RunnableLambda\n",
+    "async def foo(x: str) -> str:\n",
+    "    await adispatch_custom_event(\"event1\", {\"x\": x})\n",
+    "    await adispatch_custom_event(\"event2\", 5)\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "async for event in foo.astream_events(\"hello world\", version=\"v2\"):\n",
+    "    print(event)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In python <= 3.10, you must propagate the config manually!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'bar', 'tags': [], 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'metadata': {}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
+      "{'event': 'on_chain_stream', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'bar', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'bar', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.callbacks.manager import (\n",
+    "    adispatch_custom_event,\n",
+    ")\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "from langchain_core.runnables.config import RunnableConfig\n",
+    "\n",
+    "\n",
+    "@RunnableLambda\n",
+    "async def bar(x: str, config: RunnableConfig) -> str:\n",
+    "    \"\"\"An example that shows how to manually propagate config.\n",
+    "\n",
+    "    You must do this if you're running python<=3.10.\n",
+    "    \"\"\"\n",
+    "    await adispatch_custom_event(\"event1\", {\"x\": x}, config=config)\n",
+    "    await adispatch_custom_event(\"event2\", 5, config=config)\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "async for event in bar.astream_events(\"hello world\", version=\"v2\"):\n",
+    "    print(event)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Async Callback Handler\n",
+    "\n",
+    "You can also consume the dispatched event via an async callback handler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: f4b06910-3146-4041-8f1a-36e6ea91af63\n",
+      "Received event event2 with data: 5, with tags: ['foo', 'bar'], with metadata: {} and run_id: f4b06910-3146-4041-8f1a-36e6ea91af63\n"
      ]
     },
     {
@@ -87,7 +204,85 @@
        "1"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Any, Dict, List, Optional\n",
+    "from uuid import UUID\n",
+    "\n",
+    "from langchain_core.callbacks import AsyncCallbackHandler\n",
+    "from langchain_core.callbacks.manager import (\n",
+    "    adispatch_custom_event,\n",
+    ")\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "from langchain_core.runnables.config import RunnableConfig\n",
+    "\n",
+    "\n",
+    "class AsyncCustomCallbackHandler(AsyncCallbackHandler):\n",
+    "    async def on_custom_event(\n",
+    "        self,\n",
+    "        name: str,\n",
+    "        data: Any,\n",
+    "        *,\n",
+    "        run_id: UUID,\n",
+    "        tags: Optional[List[str]] = None,\n",
+    "        metadata: Optional[Dict[str, Any]] = None,\n",
+    "        **kwargs: Any,\n",
+    "    ) -> None:\n",
+    "        print(\n",
+    "            f\"Received event {name} with data: {data}, with tags: {tags}, with metadata: {metadata} and run_id: {run_id}\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "@RunnableLambda\n",
+    "async def bar(x: str, config: RunnableConfig) -> str:\n",
+    "    \"\"\"An example that shows how to manually propagate config.\n",
+    "\n",
+    "    You must do this if you're running python<=3.10.\n",
+    "    \"\"\"\n",
+    "    await adispatch_custom_event(\"event1\", {\"x\": x}, config=config)\n",
+    "    await adispatch_custom_event(\"event2\", 5, config=config)\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "async_handler = AsyncCustomCallbackHandler()\n",
+    "await foo.ainvoke(1, {\"callbacks\": [async_handler], \"tags\": [\"foo\", \"bar\"]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sync Callback Handler\n",
+    "\n",
+    "Let's see how to emit custom events in a sync environment use `dispatch_custom_event`.\n",
+    "\n",
+    "You **must** call `dispatch_custom_event` from within an existing `Runnable`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: 27b5ce33-dc26-4b34-92dd-08a89cb22268\n",
+      "Received event event2 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: 27b5ce33-dc26-4b34-92dd-08a89cb22268\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,130 +330,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Async\n",
+    "## Next steps\n",
     "\n",
-    "We can use the `async` `adispatch_custom_event` API to emit custom events in an async setting.\n",
-    "\n",
-    "You **must** call `adispatch_custom_event` from within an existing `Runnable`.\n",
-    "\n",
-    ":::caution COMPATIBILITY\n",
-    "LangChain cannot automatically propagate configuration, including callbacks necessary for astream_events(), to child runnables if you are running async code in python<=3.10. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
-    "\n",
-    "If you are running python<=3.10, you will need to manually propagate the `RunnableConfig` object to the child runnable in async environments. For an example of how to manually propagate the config, see the implementation of the `bar` RunnableLambda below.\n",
-    "\n",
-    "If you are running python>=3.11, the `RunnableConfig` will automatically propagate to child runnables in async environment. However, it is still a good idea to propagate the `RunnableConfig` manually if your code may run in other Python versions.\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: 823a65d1-2abf-44d7-9fd4-5b2b82cf9776\n",
-      "Received event event2 with data: 5, with tags: ['foo', 'bar'], with metadata: {} and run_id: 823a65d1-2abf-44d7-9fd4-5b2b82cf9776\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "import uuid\n",
-    "from typing import Any, Dict, List, Optional\n",
-    "from uuid import UUID\n",
-    "\n",
-    "import pytest\n",
-    "from langchain_core.callbacks import AsyncCallbackHandler\n",
-    "from langchain_core.callbacks.manager import (\n",
-    "    adispatch_custom_event,\n",
-    ")\n",
-    "from langchain_core.runnables import RunnableLambda\n",
-    "from langchain_core.runnables.config import RunnableConfig\n",
-    "\n",
-    "\n",
-    "class AsyncCustomCallbackHandler(AsyncCallbackHandler):\n",
-    "    async def on_custom_event(\n",
-    "        self,\n",
-    "        name: str,\n",
-    "        data: Any,\n",
-    "        *,\n",
-    "        run_id: UUID,\n",
-    "        tags: Optional[List[str]] = None,\n",
-    "        metadata: Optional[Dict[str, Any]] = None,\n",
-    "        **kwargs: Any,\n",
-    "    ) -> None:\n",
-    "        print(\n",
-    "            f\"Received event {name} with data: {data}, with tags: {tags}, with metadata: {metadata} and run_id: {run_id}\"\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "@RunnableLambda\n",
-    "async def foo(x: int) -> int:\n",
-    "    await adispatch_custom_event(\"event1\", {\"x\": x})\n",
-    "    await adispatch_custom_event(\"event2\", 5)\n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "@RunnableLambda\n",
-    "async def bar(x: int, config: RunnableConfig) -> int:\n",
-    "    \"\"\"An example that shows how to manually propagate config.\n",
-    "\n",
-    "    You must do this if you're running python<=3.10.\n",
-    "    \"\"\"\n",
-    "    await adispatch_custom_event(\"event1\", {\"x\": x}, config=RunnableConfig)\n",
-    "    await adispatch_custom_event(\"event2\", 5, config=RunnableConfig)\n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "async_handler = AsyncCustomCallbackHandler()\n",
-    "await foo.ainvoke(1, {\"callbacks\": [async_handler], \"tags\": [\"foo\", \"bar\"]})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Atream Events API\n",
-    "\n",
-    ":::{.callout-important}\n",
-    "\n",
-    "To see custom events, you need to use the newer `v2` API of `astream_events`.\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'foo', 'tags': [], 'run_id': 'f35d591c-51f5-4b91-ba2f-eec9378ec5e0', 'metadata': {}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': 'f35d591c-51f5-4b91-ba2f-eec9378ec5e0', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': 'f35d591c-51f5-4b91-ba2f-eec9378ec5e0', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
-      "{'event': 'on_chain_stream', 'run_id': 'f35d591c-51f5-4b91-ba2f-eec9378ec5e0', 'name': 'foo', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': 'f35d591c-51f5-4b91-ba2f-eec9378ec5e0', 'name': 'foo', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
-     ]
-    }
-   ],
-   "source": [
-    "async for event in foo.astream_events(\"hello world\", version=\"v2\"):\n",
-    "    print(event)"
+    "You've seen how to emit custom events, you can check out the more in depth guide for [astream events](/docs/how_to/streaming/#using-stream-events) which is the easiest way to leverage custom events."
    ]
   }
  ],
