--- a/docs/docs/how_to/callbacks_custom_events.ipynb
+++ b/docs/docs/how_to/callbacks_custom_events.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Atream Events API\n",
+    "## Astream Events API\n",
     "\n",
     "The most useful way to consume custom events is via the [Astream Events API](/docs/concepts/#astream_events).\n",
     "\n",
