--- a/cookbook/rag-locally-on-intel-cpu.ipynb
+++ b/cookbook/rag-locally-on-intel-cpu.ipynb
@@ -51,9 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "__import__('pysqlite3')\n",
+    "__import__(\"pysqlite3\")\n",
     "import sys\n",
-    "sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')"
+    "\n",
+    "sys.modules[\"sqlite3\"] = sys.modules.pop(\"pysqlite3\")"
    ]
   },
   {
@@ -97,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.document_loaders import PyPDFLoader"
    ]
   },
   {
@@ -240,11 +241,8 @@
    "outputs": [],
    "source": [
     "model_name = \"all-MiniLM-L6-v2.gguf2.f16.gguf\"\n",
-    "gpt4all_kwargs = {'allow_download': 'True'}\n",
-    "embeddings = GPT4AllEmbeddings(\n",
-    "    model_name=model_name,\n",
-    "    gpt4all_kwargs=gpt4all_kwargs\n",
-    ")"
+    "gpt4all_kwargs = {\"allow_download\": \"True\"}\n",
+    "embeddings = GPT4AllEmbeddings(model_name=model_name, gpt4all_kwargs=gpt4all_kwargs)"
    ]
   },
   {
@@ -595,6 +593,7 @@
    ],
    "source": [
     "from langchain import hub\n",
+    "\n",
     "rag_prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "rag_prompt.messages"
    ]
@@ -633,8 +632,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.runnables import RunnablePassthrough, RunnablePick\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough, RunnablePick\n",
+    "\n",
     "# Chain\n",
     "chain = (\n",
     "    RunnablePassthrough.assign(context=RunnablePick(\"context\") | format_docs)\n",
