Fixed some lint errors

--- a/cookbook/rag-locally-on-intel-cpu.ipynb
+++ b/cookbook/rag-locally-on-intel-cpu.ipynb
@@ -58,32 +58,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e48db803-b90e-4d43-96e3-a49b91caffd5",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intel_q1_2024_earnings.pdf             rag.py\n",
-      "langchain-RAG-local_models_0710.ipynb  \u001b[0m\u001b[01;34mtest_repo\u001b[0m/\n",
-      "langchain-RAG-local_models.ipynb       Untitled1.ipynb\n",
-      "llama-2-13b.Q8_0.gguf                  Untitled2.ipynb\n",
-      "llama-2-7b-chat.Q8_0.gguf              Untitled3.ipynb\n",
-      "llama-2-7b.Q4_K_M.gguf                 Untitled4.ipynb\n",
-      "Meta-Llama-3-8B.Q8_0.gguf              Untitled.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "14dde7e2-b236-49b9-b3a0-08c06410418c",
    "metadata": {},
@@ -358,30 +332,6 @@
     "from langchain.callbacks.manager import CallbackManager\n",
     "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler\n",
     "from langchain_community.llms import LlamaCpp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "f90c18a8-0b1f-46ed-9912-93af6a0eed38",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intel_q1_2024_earnings.pdf             rag.py\n",
-      "langchain-RAG-local_models_0710.ipynb  \u001b[0m\u001b[01;34mtest_repo\u001b[0m/\n",
-      "langchain-RAG-local_models.ipynb       Untitled1.ipynb\n",
-      "llama-2-13b.Q8_0.gguf                  Untitled2.ipynb\n",
-      "llama-2-7b-chat.Q8_0.gguf              Untitled3.ipynb\n",
-      "llama-2-7b.Q4_K_M.gguf                 Untitled4.ipynb\n",
-      "Meta-Llama-3-8B.Q8_0.gguf              Untitled.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
    ]
   },
   {
@@ -721,7 +671,9 @@
    "id": "0979f393-fd0a-4e82-b844-68371c6ad68f",
    "metadata": {},
    "source": [
-    "**Now we only need to pass the question to the chain and it will fetch the contexts directly from the vector database to generate the answer**"
+    "**Now we only need to pass the question to the chain and it will fetch the contexts directly from the vector database to generate the answer**\n",
+    "<br>\n",
+    "**Let's try with another question**"
    ]
   },
   {
