--- a/docs/docs/how_to/tool_runtime.ipynb
+++ b/docs/docs/how_to/tool_runtime.ipynb
@@ -21,7 +21,7 @@
     "which shows how to create an agent that keeps track of a given user's favorite pets.\n",
     ":::\n",
     "\n",
-    ":::warning Added in `langchain-core==0.2.21`\n",
+    ":::caution Added in `langchain-core==0.2.21`\n",
     "\n",
     "Must have `langchain-core>=0.2.21` to use this functionality.\n",
     "\n",
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -580,19 +580,18 @@
        " 'description': 'Update list of favorite pets',\n",
        " 'type': 'object',\n",
        " 'properties': {'pets': {'title': 'Pets',\n",
-       "   'description': 'List of favorite pets to set.',\n",
        "   'type': 'array',\n",
        "   'items': {'type': 'string'}}},\n",
        " 'required': ['pets']}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "UpdateFavoritePets().tool_call_schema.schema()"
+    "UpdateFavoritePets2().tool_call_schema.schema()"
    ]
   }
  ],
