--- a/docs/docs/how_to/tool_runtime.ipynb
+++ b/docs/docs/how_to/tool_runtime.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "@tool(args_schema=UpdateFavoritePetsSchema)\n",
     "def update_favorite_pets(pets, user_id):\n",
-    "    user_pets[user_id] = pets\n",
+    "    user_to_pets[user_id] = pets\n",
     "\n",
     "\n",
     "update_favorite_pets.get_input_schema().schema()"
@@ -500,7 +500,7 @@
     "    args_schema: Optional[Type[BaseModel]] = UpdateFavoritePetsSchema\n",
     "\n",
     "    def _run(self, pets, user_id):\n",
-    "        user_pets[user_id] = pets\n",
+    "        user_to_pets[user_id] = pets\n",
     "\n",
     "\n",
     "UpdateFavoritePets().get_input_schema().schema()"
@@ -562,7 +562,7 @@
     "    description: str = \"Update list of favorite pets\"\n",
     "\n",
     "    def _run(self, pets: List[str], user_id: Annotated[str, InjectedToolArg]) -> None:\n",
-    "        user_pets[user_id] = pets\n",
+    "        user_to_pets[user_id] = pets\n",
     "\n",
     "\n",
     "UpdateFavoritePets2().get_input_schema().schema()"
