--- a/docs/docs/how_to/callbacks_custom_events.ipynb
+++ b/docs/docs/how_to/callbacks_custom_events.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "- [Callbacks](/docs/concepts/#callbacks)\n",
     "- [Custom callback handlers](/docs/how_to/custom_callbacks)\n",
-    "- [Astream Events API](/docs/concepts/#astream_events) -- the `astream_events` will surface custom callback events.\n",
+    "- [Astream Events API](/docs/concepts/#astream_events) the `astream_events` method will surface custom callback events.\n",
     ":::\n",
     "\n",
     "In some situations, you may want to dipsatch a custom callback event from within a [Runnable](/docs/concepts/#runnable-interface) so it can be surfaced\n",
@@ -34,26 +34,23 @@
     "* Custom callback events can only be dispatched from within an existing `Runnable`.\n",
     "* If using `astream_events`, you must use `version='v2'` to see custom events.\n",
     "* Sending or rendering custom callbacks events in LangSmith is not yet supported.\n",
-    "* If using python<=3.10 and async, you must propagate the `RunnableConfig` object manually (see example below).\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::caution COMPATIBILITY\n",
+    "LangChain cannot automatically propagate configuration, including callbacks necessary for astream_events(), to child runnables if you are running async code in python<=3.10. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
+    "\n",
+    "If you are running python<=3.10, you will need to manually propagate the `RunnableConfig` object to the child runnable in async environments. For an example of how to manually propagate the config, see the implementation of the `bar` RunnableLambda below.\n",
+    "\n",
+    "If you are running python>=3.11, the `RunnableConfig` will automatically propagate to child runnables in async environment. However, it is still a good idea to propagate the `RunnableConfig` manually if your code may run in other Python versions.\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# | output: false\n",
     "# | echo: false\n",
@@ -71,42 +68,27 @@
     "\n",
     "We can use the `async` `adispatch_custom_event` API to emit custom events in an async setting. \n",
     "\n",
-    ":::caution COMPATIBILITY\n",
-    "LangChain cannot automatically propagate configuration, including callbacks necessary for astream_events(), to child runnables if you are running async code in python<=3.10. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
-    "\n",
-    "If you are running python<=3.10, you will need to manually propagate the `RunnableConfig` object to the child runnable in async environments. For an example of how to manually propagate the config, see the implementation of the `bar` RunnableLambda below.\n",
-    "\n",
-    "If you are running python>=3.11, the `RunnableConfig` will automatically propagate to child runnables in async environment. However, it is still a good idea to propagate the `RunnableConfig` manually if your code may run in other Python versions.\n",
-    ":::\n",
     "\n",
     ":::{.callout-important}\n",
     "\n",
-    "* To see custom events via the astream events API, you need to use the newer `v2` API of `astream_events`.\n",
+    "To see custom events via the astream events API, you need to use the newer `v2` API of `astream_events`.\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'foo', 'tags': [], 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'metadata': {}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
-      "{'event': 'on_chain_stream', 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'foo', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': '62e51748-7275-412f-a8e0-d07c0b9c9675', 'name': 'foo', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/eugene/.pyenv/versions/3.11.4/envs/core/lib/python3.11/site-packages/langchain_core/_api/beta_decorator.py:87: LangChainBetaWarning: This API is in beta and may change in the future.\n",
-      "  warn_beta(\n"
+      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'foo', 'tags': [], 'run_id': 'f354ffe8-4c22-4881-890a-c1cad038a9a6', 'metadata': {}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': 'f354ffe8-4c22-4881-890a-c1cad038a9a6', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': 'f354ffe8-4c22-4881-890a-c1cad038a9a6', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
+      "{'event': 'on_chain_stream', 'run_id': 'f354ffe8-4c22-4881-890a-c1cad038a9a6', 'name': 'foo', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': 'f354ffe8-4c22-4881-890a-c1cad038a9a6', 'name': 'foo', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
      ]
     }
    ],
@@ -138,18 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'bar', 'tags': [], 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'metadata': {}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_custom_event', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
-      "{'event': 'on_chain_stream', 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'bar', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
-      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': '59e03037-ae75-4559-873a-7f6a73a92683', 'name': 'bar', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
+      "{'event': 'on_chain_start', 'data': {'input': 'hello world'}, 'name': 'bar', 'tags': [], 'run_id': 'c787b09d-698a-41b9-8290-92aaa656f3e7', 'metadata': {}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': 'c787b09d-698a-41b9-8290-92aaa656f3e7', 'name': 'event1', 'tags': [], 'metadata': {}, 'data': {'x': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_custom_event', 'run_id': 'c787b09d-698a-41b9-8290-92aaa656f3e7', 'name': 'event2', 'tags': [], 'metadata': {}, 'data': 5, 'parent_ids': []}\n",
+      "{'event': 'on_chain_stream', 'run_id': 'c787b09d-698a-41b9-8290-92aaa656f3e7', 'name': 'bar', 'tags': [], 'metadata': {}, 'data': {'chunk': 'hello world'}, 'parent_ids': []}\n",
+      "{'event': 'on_chain_end', 'data': {'output': 'hello world'}, 'run_id': 'c787b09d-698a-41b9-8290-92aaa656f3e7', 'name': 'bar', 'tags': [], 'metadata': {}, 'parent_ids': []}\n"
      ]
     }
    ],
@@ -187,15 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: f4b06910-3146-4041-8f1a-36e6ea91af63\n",
-      "Received event event2 with data: 5, with tags: ['foo', 'bar'], with metadata: {} and run_id: f4b06910-3146-4041-8f1a-36e6ea91af63\n"
+      "Received event event1 with data: {'x': 1}, with tags: ['foo', 'bar'], with metadata: {} and run_id: a62b84be-7afd-4829-9947-7165df1f37d9\n",
+      "Received event event2 with data: 5, with tags: ['foo', 'bar'], with metadata: {} and run_id: a62b84be-7afd-4829-9947-7165df1f37d9\n"
      ]
     },
     {
@@ -204,7 +186,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +240,7 @@
    "source": [
     "## Sync Callback Handler\n",
     "\n",
-    "Let's see how to emit custom events in a sync environment use `dispatch_custom_event`.\n",
+    "Let's see how to emit custom events in a sync environment using `dispatch_custom_event`.\n",
     "\n",
     "You **must** call `dispatch_custom_event` from within an existing `Runnable`."
    ]
