--- a/cookbook/rag_with_quantized_embeddings.ipynb
+++ b/cookbook/rag_with_quantized_embeddings.ipynb
@@ -370,14 +370,13 @@
    ],
    "source": [
     "import torch\n",
-    "from langchain_huggingface.llms import HuggingFacePipeline\n",
-    "from transformers import AutoTokenizer, pipeline\n",
-    "from optimum.intel.ipex import IPEXModelForCausalLM\n",
+    "from langchain.llms.huggingface_pipeline import HuggingFacePipeline\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
     "\n",
     "model_id = \"Intel/neural-chat-7b-v3-3\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = IPEXModelForCausalLM.from_pretrained(\n",
-    "    model_id, device_map=\"auto\", torch_dtype=torch.bfloat16, export=True\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id, device_map=\"auto\", torch_dtype=torch.bfloat16\n",
     ")\n",
     "\n",
     "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, max_new_tokens=100)\n",
