fix ValidationError in few shot prompt examples

--- a/docs/docs/how_to/few_shot_examples_chat.ipynb
+++ b/docs/docs/how_to/few_shot_examples_chat.ipynb
@@ -160,6 +160,7 @@
     "    ]\n",
     ")\n",
     "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    input_variables=[],\n",
     "    example_prompt=example_prompt,\n",
     "    examples=examples,\n",
     ")\n",
